tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_empty_source_program_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:40
  •
  │
  • source command program must not be empty or whitespace-only
  │
  │   {"sources":{"kind":"command","program":""}}
  │                                          ╰─
  •
