tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_empty_source_program_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in --config: source command program must not be empty or whitespace-only at line 1 column 43
