tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_file_conflicts_with_literal.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the argument '--config' cannot be used with '--config-file'

Usage: iris lsp [FLAGS]

For more information, try '--help'.
