tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_file_missing.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: failed to read configuration file missing.json: [FILE NOT FOUND]
