tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_invalid_source_arguments_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in configuration file config/settings.json: invalid type: integer `1`, expected a string at line 1 column 65
