tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_malformed_json_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in --config: EOF while parsing an object at line 1 column 1
